--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -1,7 +1,20 @@
-[click]
-full_text=Click me!
-command=echo "Got clicked with button $button"
-color=#F79494
+[window title]
+command=xdotool getactivewindow getwindowname
+interval=1
+color=#A6D1FA
+min_width=1366
+align=center
+
+[mediaplayer]
+command=/usr/lib/i3blocks/mediaplayer
+instance=cmus
+interval=5
+signal=10
+
+[battery2]
+command=/usr/lib/i3blocks/battery2
+markup=pango
+interval=30
 
 # Guess the weather hourly
 [weather]
@@ -18,4 +31,9 @@ color=#91E78B
 # Update time every 5 seconds
 [time]
 command=date +%T
-interval=5
+interval=1
+
+
+
+
+
